# ExoFFmpeg

./: .gitignore  README.md  build.gradle  buildFFmpeg.sh  buildFlac.sh  gradle.properties  settings.gradle
ExoPlayer/: .gitignore
ExoPlayer/.git.bak/: FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
ExoPlayer/.git.bak/logs/refs/heads/: release-v2
ExoPlayer/.git.bak/objects/pack/: pack-09a7c5a3df7aea6bb0d9390726aee44066e95211.idx
ExoPlayer/.git.bak/refs/remotes/origin/: HEAD
ExoPlayer/demos/cast/src/main/: AndroidManifest.xml
ExoPlayer/demos/ima/src/main/: AndroidManifest.xml
ExoPlayer/extensions/ffmpeg/: build.gradle
ExoPlayer/extensions/ffmpeg/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
ExoPlayer/extensions/ffmpeg/src/main/jni/android-libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswresample.pc
ExoPlayer/extensions/ffmpeg/src/main/jni/ffmpeg/: .gitignore
ExoPlayer/extensions/ffmpeg/src/main/jni/ffmpeg/.git.bak/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
ExoPlayer/extensions/ffmpeg/src/main/jni/ffmpeg/.git.bak/logs/: HEAD
ExoPlayer/extensions/ffmpeg/src/main/jni/include/libavutil/: ffversion.h
ExoPlayer/extensions/ffmpeg/src/main/jni/src/: FFmpegTest.c  FFmpegTestDecode.c  ape_decoder.c  ape_decoder.h
ExoPlayer/extensions/flac/: build.gradle
ExoPlayer/extensions/flac/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/glee/: AudioOnlyRenderersFactory.java
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
